--- a/myprofile.html
+++ b/myprofile.html
@@ -61,11 +61,12 @@
             <!--Your profile div-->
             <div>
                 <div class="row">
-                    <div class="col s12 l6 offset-m3 offset-l3">
+                    <div class="col s12 m6 l6 offset-m3 offset-l3 inputs">
                         <h1 class="center">Your Profile</h1>
                         <div class="center" id="userProfile">
                             <p>username =</p>
                             <p>email=</p>
+                            <br>
                             <td class="center"><a href="#" class="btn waves-effect waves light hoverable" class="center"
                                     id="signOutButton">Sign out</a></td>
                         </div>
