--- a/mytrips.html
+++ b/mytrips.html
@@ -59,12 +59,12 @@
             </div>
             <!--Your Trip Div-->
             <div class="row">
-                <div class="col s12 l6 offset-m3 offset-l3">
+                <div class="col s12 m6 l6 offset-m3 offset-l3">
                     <h1 class="center" id=" yourTrips">Your Trips</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 l6 offset-m3 offset-l3" id="mytripsTable">
+                <div class="col s12 m6 l6 offset-m3 offset-l3 inputs" id="mytripsTable">
                     <table>
                         <thead>
                             <tr id="tripTableTop">
