--- a/aboutus.html
+++ b/aboutus.html
@@ -61,7 +61,7 @@
 
                 <!--About us div-->
                 <div class="row">
-                    <div class="col s12 l6 offset-m3 offset-l3">
+                    <div class="col s12 l6 offset-m3 offset-l3 inputs">
                         <h1 id="h1" class="center">About Us</h1>
                         <div id="aboutusText">
                             <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
