parallax height fixed

--- a/aboutus.html
+++ b/aboutus.html
@@ -92,7 +92,7 @@
         </div>
 
         <!--Footer-->
-        <footer class="footer-copyright blue">
+        <footer id="footer" class="footer-copyright blue">
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
