--- a/myprofile.html
+++ b/myprofile.html
@@ -65,6 +65,7 @@
                         <h1 class="center">Your Profile</h1>
                         <div class="center" id="userProfile">
                             <p>username =</p>
+                            <br>
                             <p>email=</p>
                             <br>
                             <td class="center"><a href="#" class="btn waves-effect waves light hoverable" class="center"
@@ -83,7 +84,7 @@
         </div>
 
         <!--Footer-->
-        <footer class="footer-copyright blue">
+        <footer id="footer" class="footer-copyright blue">
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
