--- a/aboutus.html
+++ b/aboutus.html
@@ -66,7 +66,7 @@
                         <div id="aboutusText">
                             <p class="center">Want to get outta here? Us too! Here are some fun easy ways to escape your life, love, or genral responsibilities. Just run a search and chose your favorite destination to escape to a new like, permanently or for a little bit, the choice is yours.</p>
                             <br>
-                            <p class="center">This is where we expalin how the site works...</p>
+                            <p class="center">This is where we expalin how the site works... cause we don't have it yet</p>
                             <br>
                             <p class="center">This site is brought to you via your super fucking talented classmates: Connor Breault, Marissa Carrillo, Toneth Tembrevilla, Victor Lopez, and Frank Pinder. Yes our site is awesome, if you wanna know how to replicate ask Connor. He bossed out on the layout and the rest of us pleebs just helped out where we could.</p>
                         </div>
