prettier cards, flight and car div added

--- a/index.html
+++ b/index.html
@@ -118,22 +118,33 @@
         <!--   USER INPUT RESULTS   -->
         <div class="row searchHide" id="searchResultBox">
             <div class="col s12 l6 offset-m3 offset-l3">
-        <!--    Cards-->
-                <div class="card">
-                    <div class="class-image">
-                        <img src="assets/images/circles-and-roundabouts.png.png" alt="">
-                        <a href="#" class="halfway- fab btn-floating pink pulse">
-                            <i class="material-icons">favorite</i>
-                        </a>
-                    </div>
-                    <div class="card-content">
-                        <card class="div-title">Blah</card>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repudiandae dolor porro voluptatibus voluptas deserunt accusamus in obcaecati cumque debitis. Possimus aliquid, facilis unde consequuntur nemo magnam amet optio ducimus.</p>
-                    </div>
-                    <div class="class-action">
-                        <a href="#">More Info</a>
+                <h2 class="center">Hotels</h2>
+                <div id="hotelCardDiv">
+                    <!--    CARDS      -->
+                    <div class="card">
+                        <div class="class-image">
+                            <img class="resize" src="assets/images/circles-and-roundabouts.png.png" alt="">
+                            <a href="#" class="halfway- fab btn-floating pink pulse">
+                                <i class="material-icons">favorite</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <card class="div-title">Blah</card>
+                            <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                                repudiandae dolor porro voluptatibus voluptas deserunt accusamus in obcaecati cumque
+                                debitis. Possimus aliquid, facilis unde consequuntur nemo magnam amet optio ducimus.</p>
+                        </div>
+                        <div class="class-action">
+                            <a href="#">More Info</a>
+                        </div>
                     </div>
                 </div>
+                <hr>
+                <h2 class="center">Flights</h2>
+                <div id="flightCardDiv"></div>
+                <hr>
+                <h2 class="center">Cars</h2>
+                <div id="carCardDiv"></div>
             </div>
         </div>
 
