--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                 <h2 class="center">Hotels</h2>
                 <div id="hotelCardDiv">
                     <!--    CARDS      -->
-                    <div class="card">
+                    <!--
+                        <div class="card">
                         <div class="class-image">
                             <img class="resize" src="assets/images/circles-and-roundabouts.png.png" alt="">
                             <a href="#" class="halfway- fab btn-floating pink pulse">
@@ -129,15 +130,29 @@
                             </a>
                         </div>
                         <div class="card-content">
-                            <card class="div-title">Blah</card>
-                            <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                            <span class="card-title activator grey-text text-darken-4">Hotel name<i
+                                    class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Hotel name<i
+                                    class="material-icons right">close</i></span>
+                            <br>
+                            <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quisquam
                                 repudiandae dolor porro voluptatibus voluptas deserunt accusamus in obcaecati cumque
                                 debitis. Possimus aliquid, facilis unde consequuntur nemo magnam amet optio ducimus.</p>
                         </div>
-                        <div class="class-action">
-                            <a href="#">More Info</a>
-                        </div>
+                        <form action="#" class="center">
+                            <p>
+                                <label>
+                                    <input name="group1" type="radio" value="unchecked">
+                                    <span>Select</span>
+                                </label>
+                            </p>
+                        </form>
+                        <br>
                     </div>
+                -->
                 </div>
                 <hr>
                 <h2 class="center">Flights</h2>
