added firebase database for retrieve an storage of data, and made minor html changes

--- a/myprofile.html
+++ b/myprofile.html
@@ -64,12 +64,12 @@
                     <div class="col s12 m6 l6 offset-m3 offset-l3 inputs">
                         <h1 class="center">Your Profile</h1>
                         <div class="center" id="userProfile">
-                            <p>username =</p>
+                            <input id="txtEmail" type="email" placeholder="Email">
                             <br>
-                            <p>email=</p>
+                            <input id="txtPassword" type="password" placeholder="Password">
                             <br>
-                            <td class="center"><a href="#" class="btn waves-effect waves light hoverable" class="center"
-                                    id="signOutButton">Sign out</a></td>
+                            <a href="#" class="btn waves-effect waves light hoverable" class="center"
+                                id="signOutButton">Sign out</a>
                         </div>
                     </div>
                 </div>
