--- a/mytrips.html
+++ b/mytrips.html
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 
     <title>Group Project</title>
+
+    <!-- JavaScript -->
+    <script type="text/javascript" src="./assets/javascript/logic.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-database.js"></script>
+
 </head>
 
 <body>
@@ -75,7 +84,7 @@
                             </tr>
                         </thead>
 
-                        <tbody>
+                        <tbody id="tripTableData">
                             <tr>
                                 <td class="center">Ur moms</td>
                                 <td class="center">4/20/1969</td>
@@ -107,7 +116,6 @@
         </div>
     </div>
     <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
