--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
+    <!-- javascript -->
+    <script type="text/javascript" src="assets/javascript/logic.js"></script>
+
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-database.js"></script>
+
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/styles 2.css">
+
     <title>Group Project</title>
 </head>
 
@@ -69,6 +88,17 @@
                 </div>
             </div>
 
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Please Fill All Required Fields</p>
+                </div>
+
+            </div>
+
             <!--   USER INPUT FIELD   -->
             <div>
                 <div class="row">
@@ -80,11 +110,11 @@
                                 <label for="destination">Destination</label>
                             </div>
                             <div>
-                                <input type="text" id="dateOfDeparture" class="datepicker">
+                                <input type="text" id="dateOfDeparture" tabindex="-1" class="datepicker">
                                 <label for="dateOfDeparture">Date of Departure (MM/DD/YYYY)</label>
                             </div>
                             <div>
-                                <input type="text" id="dateOFReturn" class="datepicker">
+                                <input type="text" id="dateOFReturn" tabindex="-1" class="datepicker">
                                 <label for="dateOFReturn">Date of Return (MM/DD/YYYY)</label>
                             </div>
                             <div>
@@ -118,7 +148,7 @@
         <!--   USER INPUT RESULTS   -->
         <div class="row searchHide" id="searchResultBox">
             <div class="col s12 l6 offset-m3 offset-l3">
-        <!--    Cards-->
+                <!--    Cards-->
                 <div class="card">
                     <div class="class-image">
                         <img src="assets/images/circles-and-roundabouts.png.png" alt="">
@@ -128,7 +158,9 @@
                     </div>
                     <div class="card-content">
                         <card class="div-title">Blah</card>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repudiandae dolor porro voluptatibus voluptas deserunt accusamus in obcaecati cumque debitis. Possimus aliquid, facilis unde consequuntur nemo magnam amet optio ducimus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repudiandae dolor porro
+                            voluptatibus voluptas deserunt accusamus in obcaecati cumque debitis. Possimus aliquid,
+                            facilis unde consequuntur nemo magnam amet optio ducimus.</p>
                     </div>
                     <div class="class-action">
                         <a href="#">More Info</a>
@@ -149,9 +181,10 @@
             <div class="container center align">&copy; 2019 UCD Bootcamp</div>
         </footer>
     </div>
-    <script src="./assets/javascript/logic.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+    <!-- materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 
 </html>
