--- a/index.html
+++ b/index.html
@@ -114,13 +114,10 @@
                                 <label for="dateOfDeparture">Date of Departure (MM/DD/YYYY)</label>
                             </div>
                             <div>
-//<<<<<<< fap
-                                <input type="text" id="dateOFReturn" tabindex="-1" class="datepicker">
-                                <label for="dateOFReturn">Date of Return (MM/DD/YYYY)</label>
+                                <input type="text" id="dateOfDeparture">
+                                <label for="numberofNights">Number of nights</label>
                             </div>
                             <div>
-//=======
-//>>>>>>> master
                                 <input type="text" id="numberOfAdults">
                                 <label for="numberOfAdults">Number of Adults</label>
                             </div>
@@ -150,69 +147,10 @@
 
         <!--   USER INPUT RESULTS   -->
         <div class="row searchHide" id="searchResultBox">
-//<<<<<<< cardloop
             <div class="col s12 l8 offset-m2 offset-l2">
-//=======
-            <div class="col s12 l6 offset-m3 offset-l3">
-//<<<<<<< fap
-                <!--    Cards-->
-                <div class="card">
-                    <div class="class-image">
-                        <img src="assets/images/circles-and-roundabouts.png.png" alt="">
-                        <a href="#" class="halfway- fab btn-floating pink pulse">
-                            <i class="material-icons">favorite</i>
-                        </a>
-                    </div>
-                    <div class="card-content">
-                        <card class="div-title">Blah</card>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repudiandae dolor porro
-                            voluptatibus voluptas deserunt accusamus in obcaecati cumque debitis. Possimus aliquid,
-                            facilis unde consequuntur nemo magnam amet optio ducimus.</p>
-                    </div>
-                    <div class="class-action">
-                        <a href="#">More Info</a>
-                    </div>
-//=======
-//>>>>>>> master
                 <h2 class="center">Hotels</h2>
                 <div id="hotelCardDiv">
-                    <!--    CARDS      -->
-                    <!--
-                        <div class="card">
-                        <div class="class-image">
-                            <img class="resize" src="assets/images/circles-and-roundabouts.png.png" alt="">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Hotel name<i
-                                    class="material-icons right">more_vert</i></span>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Hotel name<i
-                                    class="material-icons right">close</i></span>
-                            <br>
-                            <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quisquam
-                                repudiandae dolor porro voluptatibus voluptas deserunt accusamus in obcaecati cumque
-                                debitis. Possimus aliquid, facilis unde consequuntur nemo magnam amet optio ducimus.</p>
-                        </div>
-                        <form action="#" class="center">
-                            <p>
-                                <label>
-                                    <input name="group1" type="radio" value="unchecked">
-                                    <span>Select</span>
-                                </label>
-                            </p>
-                        </form>
-                        <br>
-                        <div class="class-action">
-                            <a href="#">More Info</a>
-                        </div>
-                    -->
-//<<<<<<< cardloop
-//=======
                     <!--Cards-->
-//>>>>>>> master
-//>>>>>>> master
                 </div>
                 <hr>
                 <h2 class="center">Flights</h2>
