--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Dancing+Script|Lobster&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Dancing+Script|Lobster|Bangers&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
@@ -28,7 +28,7 @@
             <!--Navbar-->
             <nav class="nav-wrapper blue">
                 <div class="container">
-                    <a href="#" class="brand-logo">Site Name</a>
+                    <a href="#" class="brand-logo">Excursion</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
                         <i class="material-icons">menu</i>
                     </a>
@@ -64,11 +64,18 @@
                     <div class="col s12 l6 offset-m3 offset-l3 inputs">
                         <h1 id="h1" class="center">About Us</h1>
                         <div id="aboutusText">
-                            <p class="center">Want to get outta here? Us too! Here are some fun easy ways to escape your life, love, or genral responsibilities. Just run a search and chose your favorite destination to escape to a new like, permanently or for a little bit, the choice is yours.</p>
+                            <p class="center">Want to get outta here? Us too! Here are some fun easy ways to escape your
+                                life, love, or genral responsibilities. Just run a search and chose your favorite
+                                destination to escape to a new like, permanently or for a little bit, the choice is
+                                yours.</p>
                             <br>
-                            <p class="center">This is where we expalin how the site works... cause we don't have it yet</p>
+                            <p class="center">This is where we expalin how the site works... cause we don't have it yet
+                            </p>
                             <br>
-                            <p class="center">This site is brought to you via your super fucking talented classmates: Connor Breault, Marissa Carrillo, Toneth Tembrevilla, Victor Lopez, and Frank Pinder. Yes our site is awesome, if you wanna know how to replicate ask Connor. He bossed out on the layout and the rest of us pleebs just helped out where we could.</p>
+                            <p class="center">This site is brought to you via your super fucking talented classmates:
+                                Connor Breault, Marissa Carrillo, Toneth Tembrevilla, Victor Lopez, and Frank Pinder.
+                                Yes our site is awesome, if you wanna know how to replicate ask Connor. He bossed out on
+                                the layout and the rest of us pleebs just helped out where we could.</p>
                         </div>
                     </div>
                 </div>
