--- a/mytrips.html
+++ b/mytrips.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Dancing+Script|Lobster&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=Acme|Amatic+SC|Dancing+Script|Lobster|Bangers&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
@@ -37,7 +37,7 @@
         <div id="myTripsPage">
             <nav class="nav-wrapper blue">
                 <div class="container">
-                    <a href="#" class="brand-logo">Site Name</a>
+                    <a href="#" class="brand-logo">Excursion</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
                         <i class="material-icons">menu</i>
                     </a>
