--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
@@ -112,8 +112,8 @@
                                 <label for="dateOfDeparture">Date of Departure (MM/DD/YYYY)</label>
                             </div>
                             <div>
-                                <input type="text" id="dateOfDeparture">
-                                <label for="numberofNights">Number of Nights</label>
+                                <input type="text" id="numberOfNights">
+                                <label for="numberOfNights">Number of Nights</label>
                             </div>
                             <div>
                                 <input type="text" id="numberOfAdults">
