--- a/myprofile.html
+++ b/myprofile.html
@@ -61,8 +61,79 @@
             <!--Your profile div-->
             <div>
                 <div class="row">
+
+                    <!-- NAVBAR -->
+                    <nav class=" z-depth-0 grey lighten-4">
+                        <div class="nav-wrapper container">
+                            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                                <li class="logged-in" style="display: none">
+                                    <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
+                                </li>
+                                <li class="logged-in" style="display: none">
+                                    <a href="#" class="grey-text" id="logout">Logout</a>
+                                </li>
+                                <li class="logged-in" style="display: none">
+                                    <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Travel
+                                        Detail</a>
+                                </li>
+                                <li class="logged-out" style="display: none">
+                                    <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
+                                </li>
+                                <li class="logged-out" style="display: none">
+                                    <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <!-- end NAVBAR -->
+
+                    <!-- SIGN UP MODAL -->
+                    <div id="modal-signup" class="modal">
+                        <div class="modal-content">
+                            <h4>Sign up</h4><br />
+                            <form id="signup-form">
+                                <div class="input-field">
+                                    <input type="email" id="signup-email" required />
+                                    <label for="signup-email">Email address</label>
+                                </div>
+                                <div class="input-field">
+                                    <input type="password" id="signup-password" required />
+                                    <label for="signup-password">Choose password</label>
+                                </div>
+                                <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- LOGIN MODAL -->
+                    <div id="modal-login" class="modal">
+                        <div class="modal-content">
+                            <h4>Login</h4><br />
+                            <form id="login-form">
+                                <div class="input-field">
+                                    <input type="email" id="login-email" required />
+                                    <label for="login-email">Email address</label>
+                                </div>
+                                <div class="input-field">
+                                    <input type="password" id="login-password" required />
+                                    <label for="login-password">Your password</label>
+                                </div>
+                                <button class="btn yellow darken-2 z-depth-0">Login</button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- ACCOUNT MODAL -->
+                    <div id="modal-account" class="modal">
+                        <div class="modal-content center-align">
+                            <h4>Account details</h4><br />
+                            <div class="account-details"></div>
+                            <div class="account-extras"></div>
+                        </div>
+                    </div>
+
                     <div class="col s12 m6 l6 offset-m3 offset-l3 inputs">
-                        <h1 class="center">Your Profile</h1>
+                        <!-- <h1 class="center">Your Profile</h1>
                         <div class="center" id="userProfile">
                             <input id="txtEmail" type="email" placeholder="Email">
                             <br>
@@ -71,26 +142,75 @@
                             <a href="#" class="btn waves-effect waves light hoverable" class="center"
                                 id="signOutButton">Sign out</a>
                         </div>
+                    </div> -->
+                        <!-- Travel LIST -->
+                        <div class="container" style="margin-top: 10px;">
+                            <ul class="collapsible z-depth-1 guides" style="border: none;">
+
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!--Parallax image 2-->
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="./assets/images/Fiji.jpg" alt="" class="responsive-img">
+            <!-- Create Travel MODAL -->
+            <div id="modal-create" class="modal">
+                <div class="modal-content">
+                    <h4>Create Travel Detail</h4><br />
+                    <form id="create-form">
+                        <div class="input-field">
+                            <input type="text" id="title" required>
+                            <label for="title">Destination</label>
+                        </div>
+                        <div class="input-field">
+                            <textarea id="travelDate" class="materialize-textarea" required></textarea>
+                            <label for="travelDate">Travel Date (MM/DD/YYYY)</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="text" id="numberOfNights" required>
+                            <label for="title">number of Nights</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="text" id="numberOfAdults" required>
+                            <label for="title">Number of Adults</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="text" id="numberOfChildren" required>
+                            <label for="title">number of Children</label>
+                        </div>
+                        <button class="btn yellow darken-2 z-depth-0">Create</button>
+                    </form>
+                </div>
             </div>
-        </div>
 
-        <!--Footer-->
-        <footer id="footer" class="footer-copyright blue">
-            <div class="container center align">&copy; 2019 UCD Bootcamp</div>
-        </footer>
-    </div>
-    <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+            <!--Parallax image 2-->
+            <div class="parallax-container">
+                <div class="parallax">
+                    <img src="./assets/images/Fiji.jpg" alt="" class="responsive-img">
+                </div>
+            </div>
+
+            <!--Footer-->
+            <footer id="footer" class="footer-copyright blue">
+                <div class="container center align">&copy; 2019 UCD Bootcamp</div>
+            </footer>
+        </div>
+        <script type="text/javascript" src="./assets/javascript/externalpages.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+
+        <!-- FireBase Authentication  -->
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
+
+        <script src="assets/javascript/auth.js"></script>
+        <script src="assets/javascript/index.js"></script>
+
 </body>
 
 </html>
