--- a/index.html
+++ b/index.html
@@ -148,14 +148,23 @@
             <div class="col s12 l8 offset-m2 offset-l2">
                 <h2 class="center">Food</h2>
                 <div id="foodCardDiv">
-                    <!--Cards-->
+                </div>
+                <hr>
+                <h2 class="center">Hotels</h2>
+                <div id="hotelCardDiv">
                 </div>
                 <hr>
                 <h2 class="center">Flights</h2>
                 <div id="flightCardDiv"></div>
                 <hr>
-                <h2 class="center">Cars</h2>
-                <div id="carCardDiv"></div>
+                <div class="results center" id="resultBox">
+                    <div id="priceBox">
+                        <h3>Total price</h3>
+                        <h3 id="priceResult"></h3>
+                    </div>
+                    <a href="#" class="btn-small blue waves-effect waves light hoverable" class="center"
+                        id="saveTripButton">Save Trip</a>
+                </div>
             </div>
         </div>
         <!--Parallax image 3-->
