number of children removed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
@@ -117,11 +117,7 @@
                             </div>
                             <div>
                                 <input type="text" id="numberOfAdults">
-                                <label for="numberOfAdults">Number of Adults</label>
-                            </div>
-                            <div>
-                                <input type="text" id="numberOfChildren">
-                                <label for="numberOfChildren">Number of Children</label>
+                                <label for="numberOfAdults">Number of travelers</label>
                             </div>
                         </div>
                         <br>
