update to mytrip

--- a/myprofile.html
+++ b/myprofile.html
@@ -63,28 +63,28 @@
                 <div class="row">
 
                     <!-- NAVBAR -->
-                    <nav class=" z-depth-0 grey lighten-4">
-                        <div class="nav-wrapper container">
-                            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                                <li class="logged-in" style="display: none">
-                                    <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
-                                </li>
-                                <li class="logged-in" style="display: none">
-                                    <a href="#" class="grey-text" id="logout">Logout</a>
-                                </li>
-                                <li class="logged-in" style="display: none">
-                                    <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Travel
-                                        Detail</a>
-                                </li>
-                                <li class="logged-out" style="display: none">
-                                    <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
-                                </li>
-                                <li class="logged-out" style="display: none">
-                                    <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
+                    <!-- <nav class=" z-depth-0 grey lighten-4"> -->
+                    <div>
+                        <ul id="nav-mobile">
+                            <li class="logged-in" style="display: none">
+                                <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
+                            </li>
+                            <li class="logged-in" style="display: none">
+                                <a href="#" class="grey-text" id="logout">Logout</a>
+                            </li>
+                            <li class="logged-in" style="display: none">
+                                <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Travel
+                                    Detail</a>
+                            </li>
+                            <li class="logged-out" style="display: none">
+                                <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
+                            </li>
+                            <li class="logged-out" style="display: none">
+                                <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- </nav> -->
                     <!-- end NAVBAR -->
 
                     <!-- SIGN UP MODAL -->
